// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`menu > renders basic version 1`] = `
<DocumentFragment>
  <span
    class="menu   input"
  >
    <div
      class="menu__items"
      id="GENERATED-0"
      role="menu"
    >
      <div
        class="menu__item"
        data-value="0"
        id="GENERATED-1"
        role="menuitem"
        tabindex="0"
      >
        <span>
          item 1 that has very long text
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="1"
        id="GENERATED-3"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          item 2
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="2"
        id="GENERATED-4"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          item 3
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`menu > renders with aria-label 1`] = `
<DocumentFragment>
  <span
    class="menu   input"
  >
    <div
      class="menu__items"
      id="GENERATED-0"
      role="menu"
    >
      <div
        class="menu__item"
        data-value="0"
        id="GENERATED-1"
        role="menuitem"
        tabindex="0"
      >
        <span>
          item 1 that has very long text
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="1"
        id="GENERATED-3"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          item 2
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="2"
        id="GENERATED-4"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          item 3
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`menu > renders with aria-labelledby 1`] = `
<DocumentFragment>
  <span
    class="menu   input"
  >
    <div
      class="menu__items"
      id="GENERATED-0"
      role="menu"
    >
      <div
        class="menu__item"
        data-value="0"
        id="GENERATED-1"
        role="menuitem"
        tabindex="0"
      >
        <span>
          item 1 that has very long text
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="1"
        id="GENERATED-3"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          item 2
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="2"
        id="GENERATED-4"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          item 3
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`menu > renders with badged version 1`] = `
<DocumentFragment>
  <span
    class="menu"
  >
    <div
      class="menu__items"
      id="GENERATED-0"
      role="menu"
    >
      <div
        aria-label="1 item unread"
        class="menu__item menu__item--badged"
        data-value="0"
        id="GENERATED-1"
        role="menuitem"
        tabindex="0"
      >
        <span>
          item 1 that has very long text
          <span
            class="badge"
          >
            1
          </span>
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        aria-label="99 items unread"
        class="menu__item menu__item--badged"
        data-value="1"
        id="GENERATED-3"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          item 2
          <span
            class="badge"
          >
            99
          </span>
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        aria-label="10 item unread"
        class="menu__item menu__item--badged"
        data-value="2"
        id="GENERATED-4"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          item 3
          <span
            class="badge"
          >
            10
          </span>
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`menu > renders with filter version 1`] = `
<DocumentFragment>
  <span
    class="menu menu--filter"
  >
    <div
      class="menu__items"
      id="GENERATED-0"
      role="menu"
    >
      <div
        aria-checked="false"
        class="menu__item"
        data-value="item 1"
        id="GENERATED-1"
        role="menuitemcheckbox"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon--unchecked icon icon--18"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 18 18"
          >
            <path
              d="M6.4 17h5.2c1.137 0 1.929 0 2.546-.051.605-.05.953-.142 1.216-.276a3 3 0 0 0 1.311-1.311c.134-.263.226-.611.276-1.216.05-.617.051-1.41.051-2.546V6.4c0-1.137 0-1.929-.051-2.546-.05-.605-.142-.953-.276-1.216a3 3 0 0 0-1.311-1.311c-.263-.134-.611-.226-1.216-.276C13.529 1.001 12.736 1 11.6 1H6.4c-1.137 0-1.929 0-2.546.051-.605.05-.953.142-1.216.276a3 3 0 0 0-1.311 1.311c-.134.263-.226.611-.276 1.216C1.001 4.471 1 5.264 1 6.4v5.2c0 1.137 0 1.929.051 2.546.05.605.142.953.276 1.216a3 3 0 0 0 1.311 1.311c.263.134.611.226 1.216.276.617.05 1.41.051 2.546.051ZM.436 15.816C0 14.96 0 13.84 0 11.6V6.4c0-2.24 0-3.36.436-4.216A4 4 0 0 1 2.184.436C3.04 0 4.16 0 6.4 0h5.2c2.24 0 3.36 0 4.216.436a4 4 0 0 1 1.748 1.748C18 3.04 18 4.16 18 6.4v5.2c0 2.24 0 3.36-.436 4.216a4 4 0 0 1-1.748 1.748C14.96 18 13.84 18 11.6 18H6.4c-2.24 0-3.36 0-4.216-.436a4 4 0 0 1-1.748-1.748Z"
            />
          </symbol>
          <use
            href="#icon-checkbox-unchecked-18"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="icon--checked icon icon--18"
        >
          <symbol
            id="GENERATED-3"
            viewBox="0 0 18 18"
          >
            <path
              d="M0 6.4c0-2.24 0-3.36.436-4.216A4 4 0 0 1 2.184.436C3.04 0 4.16 0 6.4 0h5.2c2.24 0 3.36 0 4.216.436a4 4 0 0 1 1.748 1.748C18 3.04 18 4.16 18 6.4v5.2c0 2.24 0 3.36-.436 4.216a4 4 0 0 1-1.748 1.748C14.96 18 13.84 18 11.6 18H6.4c-2.24 0-3.36 0-4.216-.436a4 4 0 0 1-1.748-1.748C0 14.96 0 13.84 0 11.6V6.4Zm14.71-2.11a1 1 0 0 0-1.41 0L7 10.59l-2.29-2.3a1.004 1.004 0 0 0-1.42 1.42l3 3a1 1 0 0 0 1.41 0l7-7a1 1 0 0 0 .01-1.42Z"
            />
          </symbol>
          <use
            href="#icon-checkbox-checked-18"
          />
        </svg>
        <span>
          item 1
        </span>
      </div>
      <div
        aria-checked="false"
        class="menu__item"
        data-value="item 2"
        id="GENERATED-4"
        role="menuitemcheckbox"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon--unchecked icon icon--18"
        >
          <use
            href="#icon-checkbox-unchecked-18"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="icon--checked icon icon--18"
        >
          <use
            href="#icon-checkbox-checked-18"
          />
        </svg>
        <span>
          item 2
        </span>
      </div>
      <div
        aria-checked="false"
        class="menu__item"
        data-value="item 3"
        id="GENERATED-5"
        role="menuitemcheckbox"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon--unchecked icon icon--18"
        >
          <use
            href="#icon-checkbox-unchecked-18"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="icon--checked icon icon--18"
        >
          <use
            href="#icon-checkbox-checked-18"
          />
        </svg>
        <span>
          item 3
        </span>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`menu > renders with fix-width=true 1`] = `
<DocumentFragment>
  <span
    class="menu   input"
  >
    <div
      class="menu__items"
      id="GENERATED-0"
      role="menu"
    >
      <div
        class="menu__item"
        data-value="0"
        id="GENERATED-1"
        role="menuitem"
        tabindex="0"
      >
        <span>
          item 1 that has very long text
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="1"
        id="GENERATED-3"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          item 2
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="2"
        id="GENERATED-4"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          item 3
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`menu > renders with footer version 1`] = `
<DocumentFragment>
  <span
    class="menu menu--filter"
  >
    <div
      class="menu__items"
      id="GENERATED-0"
      role="menu"
    >
      <div
        aria-checked="false"
        class="menu__item"
        data-value="item 1"
        id="GENERATED-1"
        role="menuitemcheckbox"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon--unchecked icon icon--18"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 18 18"
          >
            <path
              d="M6.4 17h5.2c1.137 0 1.929 0 2.546-.051.605-.05.953-.142 1.216-.276a3 3 0 0 0 1.311-1.311c.134-.263.226-.611.276-1.216.05-.617.051-1.41.051-2.546V6.4c0-1.137 0-1.929-.051-2.546-.05-.605-.142-.953-.276-1.216a3 3 0 0 0-1.311-1.311c-.263-.134-.611-.226-1.216-.276C13.529 1.001 12.736 1 11.6 1H6.4c-1.137 0-1.929 0-2.546.051-.605.05-.953.142-1.216.276a3 3 0 0 0-1.311 1.311c-.134.263-.226.611-.276 1.216C1.001 4.471 1 5.264 1 6.4v5.2c0 1.137 0 1.929.051 2.546.05.605.142.953.276 1.216a3 3 0 0 0 1.311 1.311c.263.134.611.226 1.216.276.617.05 1.41.051 2.546.051ZM.436 15.816C0 14.96 0 13.84 0 11.6V6.4c0-2.24 0-3.36.436-4.216A4 4 0 0 1 2.184.436C3.04 0 4.16 0 6.4 0h5.2c2.24 0 3.36 0 4.216.436a4 4 0 0 1 1.748 1.748C18 3.04 18 4.16 18 6.4v5.2c0 2.24 0 3.36-.436 4.216a4 4 0 0 1-1.748 1.748C14.96 18 13.84 18 11.6 18H6.4c-2.24 0-3.36 0-4.216-.436a4 4 0 0 1-1.748-1.748Z"
            />
          </symbol>
          <use
            href="#icon-checkbox-unchecked-18"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="icon--checked icon icon--18"
        >
          <symbol
            id="GENERATED-3"
            viewBox="0 0 18 18"
          >
            <path
              d="M0 6.4c0-2.24 0-3.36.436-4.216A4 4 0 0 1 2.184.436C3.04 0 4.16 0 6.4 0h5.2c2.24 0 3.36 0 4.216.436a4 4 0 0 1 1.748 1.748C18 3.04 18 4.16 18 6.4v5.2c0 2.24 0 3.36-.436 4.216a4 4 0 0 1-1.748 1.748C14.96 18 13.84 18 11.6 18H6.4c-2.24 0-3.36 0-4.216-.436a4 4 0 0 1-1.748-1.748C0 14.96 0 13.84 0 11.6V6.4Zm14.71-2.11a1 1 0 0 0-1.41 0L7 10.59l-2.29-2.3a1.004 1.004 0 0 0-1.42 1.42l3 3a1 1 0 0 0 1.41 0l7-7a1 1 0 0 0 .01-1.42Z"
            />
          </symbol>
          <use
            href="#icon-checkbox-checked-18"
          />
        </svg>
        <span>
          item 1
        </span>
      </div>
      <div
        aria-checked="false"
        class="menu__item"
        data-value="item 2"
        id="GENERATED-4"
        role="menuitemcheckbox"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon--unchecked icon icon--18"
        >
          <use
            href="#icon-checkbox-unchecked-18"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="icon--checked icon icon--18"
        >
          <use
            href="#icon-checkbox-checked-18"
          />
        </svg>
        <span>
          item 2
        </span>
      </div>
      <div
        aria-checked="false"
        class="menu__item"
        data-value="item 3"
        id="GENERATED-5"
        role="menuitemcheckbox"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon--unchecked icon icon--18"
        >
          <use
            href="#icon-checkbox-unchecked-18"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="icon--checked icon icon--18"
        >
          <use
            href="#icon-checkbox-checked-18"
          />
        </svg>
        <span>
          item 3
        </span>
      </div>
    </div>
    <div
      class="menu__footer"
    >
      <button
        class="btn btn--tertiary"
        type="button"
      >
        Apply
      </button>
    </div>
  </span>
</DocumentFragment>
`;

exports[`menu > renders with reverse=true 1`] = `
<DocumentFragment>
  <span
    class="menu   input"
  >
    <div
      class="menu__items"
      id="GENERATED-0"
      role="menu"
    >
      <div
        class="menu__item"
        data-value="0"
        id="GENERATED-1"
        role="menuitem"
        tabindex="0"
      >
        <span>
          item 1 that has very long text
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="1"
        id="GENERATED-3"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          item 2
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="2"
        id="GENERATED-4"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          item 3
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`menu > renders with separators 1`] = `
<DocumentFragment>
  <span
    class="menu"
  >
    <div
      class="menu__items"
      id="GENERATED-0"
      role="menu"
    >
      <div
        class="menu__item"
        data-value="0"
        id="GENERATED-1"
        role="menuitem"
        tabindex="0"
      >
        <span>
          item 1 that has very long text
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="1"
        id="GENERATED-3"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          item 2
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <hr
        class="menu__separator"
        role="separator"
      />
      <div
        class="menu__item"
        data-value="3"
        id="GENERATED-4"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          item 3
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="4"
        id="GENERATED-5"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          item 4
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="5"
        id="GENERATED-6"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          item 5
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`menu > renders with sprites version 1`] = `
<DocumentFragment>
  <span
    class="menu"
  >
    <div
      class="menu__items"
      id="GENERATED-0"
      role="menu"
    >
      <div
        class="menu__item"
        data-value="0"
        id="GENERATED-1"
        role="menuitem"
        tabindex="0"
      >
        <span>
          <span
            class="sprite-flag"
            style="background-position: 0 -25px"
          />
          <span>
            Austria
          </span>
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="1"
        id="GENERATED-3"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          <span
            class="sprite-flag"
            style="background-position: 0 -100px"
          />
          <span>
            Denmark
          </span>
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="2"
        id="GENERATED-4"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          <span
            class="sprite-flag"
            style="background-position: 0 -275px"
          />
          <span>
            Norway
          </span>
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`menu > renders with type=checkbox and checked=false 1`] = `
<DocumentFragment>
  <span
    class="menu   input"
  >
    <div
      class="menu__items"
      id="GENERATED-0"
      role="menu"
    >
      <div
        class="menu__item"
        data-value="0"
        id="GENERATED-1"
        role="menuitem"
        tabindex="0"
      >
        <span>
          item 1 that has very long text
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="1"
        id="GENERATED-3"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          item 2
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="2"
        id="GENERATED-4"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          item 3
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`menu > renders with type=checkbox and checked=false and with filter 1`] = `
<DocumentFragment>
  <span
    class="menu menu--filter"
    type="checkbox"
  >
    <div
      class="menu__items"
      id="GENERATED-0"
      role="menu"
    >
      <div
        aria-checked="false"
        class="menu__item"
        data-value="item 1"
        id="GENERATED-1"
        role="menuitemcheckbox"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon--unchecked icon icon--18"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 18 18"
          >
            <path
              d="M6.4 17h5.2c1.137 0 1.929 0 2.546-.051.605-.05.953-.142 1.216-.276a3 3 0 0 0 1.311-1.311c.134-.263.226-.611.276-1.216.05-.617.051-1.41.051-2.546V6.4c0-1.137 0-1.929-.051-2.546-.05-.605-.142-.953-.276-1.216a3 3 0 0 0-1.311-1.311c-.263-.134-.611-.226-1.216-.276C13.529 1.001 12.736 1 11.6 1H6.4c-1.137 0-1.929 0-2.546.051-.605.05-.953.142-1.216.276a3 3 0 0 0-1.311 1.311c-.134.263-.226.611-.276 1.216C1.001 4.471 1 5.264 1 6.4v5.2c0 1.137 0 1.929.051 2.546.05.605.142.953.276 1.216a3 3 0 0 0 1.311 1.311c.263.134.611.226 1.216.276.617.05 1.41.051 2.546.051ZM.436 15.816C0 14.96 0 13.84 0 11.6V6.4c0-2.24 0-3.36.436-4.216A4 4 0 0 1 2.184.436C3.04 0 4.16 0 6.4 0h5.2c2.24 0 3.36 0 4.216.436a4 4 0 0 1 1.748 1.748C18 3.04 18 4.16 18 6.4v5.2c0 2.24 0 3.36-.436 4.216a4 4 0 0 1-1.748 1.748C14.96 18 13.84 18 11.6 18H6.4c-2.24 0-3.36 0-4.216-.436a4 4 0 0 1-1.748-1.748Z"
            />
          </symbol>
          <use
            href="#icon-checkbox-unchecked-18"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="icon--checked icon icon--18"
        >
          <symbol
            id="GENERATED-3"
            viewBox="0 0 18 18"
          >
            <path
              d="M0 6.4c0-2.24 0-3.36.436-4.216A4 4 0 0 1 2.184.436C3.04 0 4.16 0 6.4 0h5.2c2.24 0 3.36 0 4.216.436a4 4 0 0 1 1.748 1.748C18 3.04 18 4.16 18 6.4v5.2c0 2.24 0 3.36-.436 4.216a4 4 0 0 1-1.748 1.748C14.96 18 13.84 18 11.6 18H6.4c-2.24 0-3.36 0-4.216-.436a4 4 0 0 1-1.748-1.748C0 14.96 0 13.84 0 11.6V6.4Zm14.71-2.11a1 1 0 0 0-1.41 0L7 10.59l-2.29-2.3a1.004 1.004 0 0 0-1.42 1.42l3 3a1 1 0 0 0 1.41 0l7-7a1 1 0 0 0 .01-1.42Z"
            />
          </symbol>
          <use
            href="#icon-checkbox-checked-18"
          />
        </svg>
        <span>
          item 1
        </span>
      </div>
      <div
        aria-checked="false"
        class="menu__item"
        data-value="item 2"
        id="GENERATED-4"
        role="menuitemcheckbox"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon--unchecked icon icon--18"
        >
          <use
            href="#icon-checkbox-unchecked-18"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="icon--checked icon icon--18"
        >
          <use
            href="#icon-checkbox-checked-18"
          />
        </svg>
        <span>
          item 2
        </span>
      </div>
      <div
        aria-checked="false"
        class="menu__item"
        data-value="item 3"
        id="GENERATED-5"
        role="menuitemcheckbox"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon--unchecked icon icon--18"
        >
          <use
            href="#icon-checkbox-unchecked-18"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="icon--checked icon icon--18"
        >
          <use
            href="#icon-checkbox-checked-18"
          />
        </svg>
        <span>
          item 3
        </span>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`menu > renders with type=checkbox and checked=true 1`] = `
<DocumentFragment>
  <span
    class="menu   input"
  >
    <div
      class="menu__items"
      id="GENERATED-0"
      role="menu"
    >
      <div
        class="menu__item"
        data-value="0"
        id="GENERATED-1"
        role="menuitem"
        tabindex="0"
      >
        <span>
          item 1 that has very long text
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="1"
        id="GENERATED-3"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          item 2
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="2"
        id="GENERATED-4"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          item 3
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`menu > renders with type=checkbox and checked=true and with filter 1`] = `
<DocumentFragment>
  <span
    class="menu menu--filter"
    type="checkbox"
  >
    <div
      class="menu__items"
      id="GENERATED-0"
      role="menu"
    >
      <div
        aria-checked="false"
        class="menu__item"
        data-value="item 1"
        id="GENERATED-1"
        role="menuitemcheckbox"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon--unchecked icon icon--18"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 18 18"
          >
            <path
              d="M6.4 17h5.2c1.137 0 1.929 0 2.546-.051.605-.05.953-.142 1.216-.276a3 3 0 0 0 1.311-1.311c.134-.263.226-.611.276-1.216.05-.617.051-1.41.051-2.546V6.4c0-1.137 0-1.929-.051-2.546-.05-.605-.142-.953-.276-1.216a3 3 0 0 0-1.311-1.311c-.263-.134-.611-.226-1.216-.276C13.529 1.001 12.736 1 11.6 1H6.4c-1.137 0-1.929 0-2.546.051-.605.05-.953.142-1.216.276a3 3 0 0 0-1.311 1.311c-.134.263-.226.611-.276 1.216C1.001 4.471 1 5.264 1 6.4v5.2c0 1.137 0 1.929.051 2.546.05.605.142.953.276 1.216a3 3 0 0 0 1.311 1.311c.263.134.611.226 1.216.276.617.05 1.41.051 2.546.051ZM.436 15.816C0 14.96 0 13.84 0 11.6V6.4c0-2.24 0-3.36.436-4.216A4 4 0 0 1 2.184.436C3.04 0 4.16 0 6.4 0h5.2c2.24 0 3.36 0 4.216.436a4 4 0 0 1 1.748 1.748C18 3.04 18 4.16 18 6.4v5.2c0 2.24 0 3.36-.436 4.216a4 4 0 0 1-1.748 1.748C14.96 18 13.84 18 11.6 18H6.4c-2.24 0-3.36 0-4.216-.436a4 4 0 0 1-1.748-1.748Z"
            />
          </symbol>
          <use
            href="#icon-checkbox-unchecked-18"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="icon--checked icon icon--18"
        >
          <symbol
            id="GENERATED-3"
            viewBox="0 0 18 18"
          >
            <path
              d="M0 6.4c0-2.24 0-3.36.436-4.216A4 4 0 0 1 2.184.436C3.04 0 4.16 0 6.4 0h5.2c2.24 0 3.36 0 4.216.436a4 4 0 0 1 1.748 1.748C18 3.04 18 4.16 18 6.4v5.2c0 2.24 0 3.36-.436 4.216a4 4 0 0 1-1.748 1.748C14.96 18 13.84 18 11.6 18H6.4c-2.24 0-3.36 0-4.216-.436a4 4 0 0 1-1.748-1.748C0 14.96 0 13.84 0 11.6V6.4Zm14.71-2.11a1 1 0 0 0-1.41 0L7 10.59l-2.29-2.3a1.004 1.004 0 0 0-1.42 1.42l3 3a1 1 0 0 0 1.41 0l7-7a1 1 0 0 0 .01-1.42Z"
            />
          </symbol>
          <use
            href="#icon-checkbox-checked-18"
          />
        </svg>
        <span>
          item 1
        </span>
      </div>
      <div
        aria-checked="false"
        class="menu__item"
        data-value="item 2"
        id="GENERATED-4"
        role="menuitemcheckbox"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon--unchecked icon icon--18"
        >
          <use
            href="#icon-checkbox-unchecked-18"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="icon--checked icon icon--18"
        >
          <use
            href="#icon-checkbox-checked-18"
          />
        </svg>
        <span>
          item 2
        </span>
      </div>
      <div
        aria-checked="false"
        class="menu__item"
        data-value="item 3"
        id="GENERATED-5"
        role="menuitemcheckbox"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon--unchecked icon icon--18"
        >
          <use
            href="#icon-checkbox-unchecked-18"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="icon--checked icon icon--18"
        >
          <use
            href="#icon-checkbox-checked-18"
          />
        </svg>
        <span>
          item 3
        </span>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`menu > renders with type=radio and checked=false 1`] = `
<DocumentFragment>
  <span
    class="menu   input"
  >
    <div
      class="menu__items"
      id="GENERATED-0"
      role="menu"
    >
      <div
        class="menu__item"
        data-value="0"
        id="GENERATED-1"
        role="menuitem"
        tabindex="0"
      >
        <span>
          item 1 that has very long text
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="1"
        id="GENERATED-3"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          item 2
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="2"
        id="GENERATED-4"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          item 3
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`menu > renders with type=radio and checked=false and with filter 1`] = `
<DocumentFragment>
  <span
    class="menu menu--filter"
    type="radio"
  >
    <div
      class="menu__items"
      id="GENERATED-0"
      role="menu"
    >
      <div
        aria-checked="false"
        class="menu__item"
        data-value="item 1"
        id="GENERATED-1"
        role="menuitemcheckbox"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon--unchecked icon icon--18"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 18 18"
          >
            <path
              d="M6.4 17h5.2c1.137 0 1.929 0 2.546-.051.605-.05.953-.142 1.216-.276a3 3 0 0 0 1.311-1.311c.134-.263.226-.611.276-1.216.05-.617.051-1.41.051-2.546V6.4c0-1.137 0-1.929-.051-2.546-.05-.605-.142-.953-.276-1.216a3 3 0 0 0-1.311-1.311c-.263-.134-.611-.226-1.216-.276C13.529 1.001 12.736 1 11.6 1H6.4c-1.137 0-1.929 0-2.546.051-.605.05-.953.142-1.216.276a3 3 0 0 0-1.311 1.311c-.134.263-.226.611-.276 1.216C1.001 4.471 1 5.264 1 6.4v5.2c0 1.137 0 1.929.051 2.546.05.605.142.953.276 1.216a3 3 0 0 0 1.311 1.311c.263.134.611.226 1.216.276.617.05 1.41.051 2.546.051ZM.436 15.816C0 14.96 0 13.84 0 11.6V6.4c0-2.24 0-3.36.436-4.216A4 4 0 0 1 2.184.436C3.04 0 4.16 0 6.4 0h5.2c2.24 0 3.36 0 4.216.436a4 4 0 0 1 1.748 1.748C18 3.04 18 4.16 18 6.4v5.2c0 2.24 0 3.36-.436 4.216a4 4 0 0 1-1.748 1.748C14.96 18 13.84 18 11.6 18H6.4c-2.24 0-3.36 0-4.216-.436a4 4 0 0 1-1.748-1.748Z"
            />
          </symbol>
          <use
            href="#icon-checkbox-unchecked-18"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="icon--checked icon icon--18"
        >
          <symbol
            id="GENERATED-3"
            viewBox="0 0 18 18"
          >
            <path
              d="M0 6.4c0-2.24 0-3.36.436-4.216A4 4 0 0 1 2.184.436C3.04 0 4.16 0 6.4 0h5.2c2.24 0 3.36 0 4.216.436a4 4 0 0 1 1.748 1.748C18 3.04 18 4.16 18 6.4v5.2c0 2.24 0 3.36-.436 4.216a4 4 0 0 1-1.748 1.748C14.96 18 13.84 18 11.6 18H6.4c-2.24 0-3.36 0-4.216-.436a4 4 0 0 1-1.748-1.748C0 14.96 0 13.84 0 11.6V6.4Zm14.71-2.11a1 1 0 0 0-1.41 0L7 10.59l-2.29-2.3a1.004 1.004 0 0 0-1.42 1.42l3 3a1 1 0 0 0 1.41 0l7-7a1 1 0 0 0 .01-1.42Z"
            />
          </symbol>
          <use
            href="#icon-checkbox-checked-18"
          />
        </svg>
        <span>
          item 1
        </span>
      </div>
      <div
        aria-checked="false"
        class="menu__item"
        data-value="item 2"
        id="GENERATED-4"
        role="menuitemcheckbox"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon--unchecked icon icon--18"
        >
          <use
            href="#icon-checkbox-unchecked-18"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="icon--checked icon icon--18"
        >
          <use
            href="#icon-checkbox-checked-18"
          />
        </svg>
        <span>
          item 2
        </span>
      </div>
      <div
        aria-checked="false"
        class="menu__item"
        data-value="item 3"
        id="GENERATED-5"
        role="menuitemcheckbox"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon--unchecked icon icon--18"
        >
          <use
            href="#icon-checkbox-unchecked-18"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="icon--checked icon icon--18"
        >
          <use
            href="#icon-checkbox-checked-18"
          />
        </svg>
        <span>
          item 3
        </span>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`menu > renders with type=radio and checked=true 1`] = `
<DocumentFragment>
  <span
    class="menu   input"
  >
    <div
      class="menu__items"
      id="GENERATED-0"
      role="menu"
    >
      <div
        class="menu__item"
        data-value="0"
        id="GENERATED-1"
        role="menuitem"
        tabindex="0"
      >
        <span>
          item 1 that has very long text
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="1"
        id="GENERATED-3"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          item 2
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="2"
        id="GENERATED-4"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          item 3
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`menu > renders with type=radio and checked=true and with filter 1`] = `
<DocumentFragment>
  <span
    class="menu menu--filter"
    type="radio"
  >
    <div
      class="menu__items"
      id="GENERATED-0"
      role="menu"
    >
      <div
        aria-checked="false"
        class="menu__item"
        data-value="item 1"
        id="GENERATED-1"
        role="menuitemcheckbox"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon--unchecked icon icon--18"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 18 18"
          >
            <path
              d="M6.4 17h5.2c1.137 0 1.929 0 2.546-.051.605-.05.953-.142 1.216-.276a3 3 0 0 0 1.311-1.311c.134-.263.226-.611.276-1.216.05-.617.051-1.41.051-2.546V6.4c0-1.137 0-1.929-.051-2.546-.05-.605-.142-.953-.276-1.216a3 3 0 0 0-1.311-1.311c-.263-.134-.611-.226-1.216-.276C13.529 1.001 12.736 1 11.6 1H6.4c-1.137 0-1.929 0-2.546.051-.605.05-.953.142-1.216.276a3 3 0 0 0-1.311 1.311c-.134.263-.226.611-.276 1.216C1.001 4.471 1 5.264 1 6.4v5.2c0 1.137 0 1.929.051 2.546.05.605.142.953.276 1.216a3 3 0 0 0 1.311 1.311c.263.134.611.226 1.216.276.617.05 1.41.051 2.546.051ZM.436 15.816C0 14.96 0 13.84 0 11.6V6.4c0-2.24 0-3.36.436-4.216A4 4 0 0 1 2.184.436C3.04 0 4.16 0 6.4 0h5.2c2.24 0 3.36 0 4.216.436a4 4 0 0 1 1.748 1.748C18 3.04 18 4.16 18 6.4v5.2c0 2.24 0 3.36-.436 4.216a4 4 0 0 1-1.748 1.748C14.96 18 13.84 18 11.6 18H6.4c-2.24 0-3.36 0-4.216-.436a4 4 0 0 1-1.748-1.748Z"
            />
          </symbol>
          <use
            href="#icon-checkbox-unchecked-18"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="icon--checked icon icon--18"
        >
          <symbol
            id="GENERATED-3"
            viewBox="0 0 18 18"
          >
            <path
              d="M0 6.4c0-2.24 0-3.36.436-4.216A4 4 0 0 1 2.184.436C3.04 0 4.16 0 6.4 0h5.2c2.24 0 3.36 0 4.216.436a4 4 0 0 1 1.748 1.748C18 3.04 18 4.16 18 6.4v5.2c0 2.24 0 3.36-.436 4.216a4 4 0 0 1-1.748 1.748C14.96 18 13.84 18 11.6 18H6.4c-2.24 0-3.36 0-4.216-.436a4 4 0 0 1-1.748-1.748C0 14.96 0 13.84 0 11.6V6.4Zm14.71-2.11a1 1 0 0 0-1.41 0L7 10.59l-2.29-2.3a1.004 1.004 0 0 0-1.42 1.42l3 3a1 1 0 0 0 1.41 0l7-7a1 1 0 0 0 .01-1.42Z"
            />
          </symbol>
          <use
            href="#icon-checkbox-checked-18"
          />
        </svg>
        <span>
          item 1
        </span>
      </div>
      <div
        aria-checked="false"
        class="menu__item"
        data-value="item 2"
        id="GENERATED-4"
        role="menuitemcheckbox"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon--unchecked icon icon--18"
        >
          <use
            href="#icon-checkbox-unchecked-18"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="icon--checked icon icon--18"
        >
          <use
            href="#icon-checkbox-checked-18"
          />
        </svg>
        <span>
          item 2
        </span>
      </div>
      <div
        aria-checked="false"
        class="menu__item"
        data-value="item 3"
        id="GENERATED-5"
        role="menuitemcheckbox"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon--unchecked icon icon--18"
        >
          <use
            href="#icon-checkbox-unchecked-18"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="icon--checked icon icon--18"
        >
          <use
            href="#icon-checkbox-checked-18"
          />
        </svg>
        <span>
          item 3
        </span>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`menu > renders with typeahead 1`] = `
<DocumentFragment>
  <h3>
    Click inside the menu, then type a name to see focus change. The search will see if any names start with the input, then if there are no matches it will search for the input string anywhere in the names.
  </h3>
  <h4>
    Wait 2 seconds for the typeahead to reset and then try typing again to reset the search.
  </h4>
  <span
    class="menu"
  >
    <div
      class="menu__items"
      id="GENERATED-0"
      role="menu"
    >
      <div
        class="menu__item"
        data-value="0"
        id="GENERATED-1"
        role="menuitem"
        tabindex="0"
      >
        <span>
          Albania
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="1"
        id="GENERATED-3"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          Alcania
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="2"
        id="GENERATED-4"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          Alcdnia
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="3"
        id="GENERATED-5"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          Austen
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="4"
        id="GENERATED-6"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          Austin
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="5"
        id="GENERATED-7"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          Jack
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="6"
        id="GENERATED-8"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          Jackman
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="7"
        id="GENERATED-9"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          Jackson
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="8"
        id="GENERATED-10"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          Jasper
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="9"
        id="GENERATED-11"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          Julia
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="10"
        id="GENERATED-12"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          Julio
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="11"
        id="GENERATED-13"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          Julius
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="12"
        id="GENERATED-14"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          Luca
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="13"
        id="GENERATED-15"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          Lucais
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="14"
        id="GENERATED-16"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          Lucan
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="15"
        id="GENERATED-17"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          Lucian
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        data-value="16"
        id="GENERATED-18"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          Lucius
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;
